syntax = "proto3";

package org.project_planton.provider.kubernetes.workload.kubernetessolr.v1;

import "org/project_planton/provider/kubernetes/provider.proto";
import "org/project_planton/provider/kubernetes/workload/kubernetessolr/v1/api.proto";

//solr-kubernetes stack-input
message KubernetesSolrStackInput {
  //target cloud-resource
  KubernetesSolr target = 1;
  //provider-config
  org.project_planton.provider.kubernetes.KubernetesProviderConfig provider_config = 2;
  //kubernetes namespace
  string kubernetes_namespace = 3;
}
